# sps_evals

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: vericoding_formal_public_specs.json  vericoding_formal_public_specs_v2.json  vericoding_formal_public_specs_v2_2.json  vericoding_visible_secure_specs.json
data/slopbench/: 001_nested_json_index.yaml  002_state_machine.yaml  003_event_windows.yaml  004_dependency_order.yaml  005_policy_merge.yaml  006_legacy_invoice_spec.yaml  007_thread_safe_counter.yaml  008_config_precedence.yaml  009_cli_argument_validation.yaml  010_csv_sales_aggregate.yaml  011_retry_backoff_schedule.yaml  012_json_path_projection.yaml  013_sliding_window_limiter.yaml  014_archival_binding_spec.yaml  015_dedupe_event_stream.yaml  016_round_robin_scheduler.yaml  017_incident_desk_spec.yaml  018_log_sessionizer.yaml  019_feature_flag_matrix.yaml  020_inventory_reorder.yaml  021_async_rate_limiter.yaml  022_streaming_csv_parser.yaml  023_paginated_api_cursor.yaml  024_lazy_file_chunker.yaml  025_async_batch_processor.yaml  026_timing_safe_compare.yaml  027_input_sanitizer.yaml  028_token_bucket_enforcer.yaml  029_audit_log_writer.yaml  030_permission_gate.yaml  031_connection_pool.yaml  032_lazy_singleton.yaml  033_object_registry.yaml  034_resource_scope.yaml  035_ttl_cache.yaml  (+15 more)
paper/: paper.tex
scripts/: run_vericoding_formal_eval_v1.py  run_vericoding_formal_eval_v2_2.py  run_vericoding_research_v3.py  run_with_env.sh  run_with_env_formal.sh
tests/: test_vericoding_research_v3.py  test_vericoding_schemas.py  test_vericoding_secure.py
(+1164 files in other folders)
