[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "sps-evals"
version = "0.1.0"
description = "Public evaluation package for executable trust-boundary triage in secure program synthesis."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Jason Tang" }
]
dependencies = [
  "openai>=1.0",
  "pytest>=8.0",
  "scipy>=1.13",
  "pyyaml>=6.0",
  "radon>=6.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.49"]
google = ["google-genai>=1.0"]
scbench = ["datasets>=3.0"]
inspect = ["inspect-ai>=0.3.219,<0.4"]
dev = [
  "ruff>=0.8",
]

[project.scripts]
sps-evals = "specoracle.cli:main"

[project.entry-points.inspect_ai]
slopbench_inspect = "slopbench_inspect"

[tool.hatch.build.targets.wheel]
packages = ["src/specoracle", "src/slopbench_inspect"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["artifacts", "runs"]
